--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
+    
     <title>BlackJack ♠️♥️♦️♣️</title>
 </head>
     <body>
-        
+        <h1>BlackJack ♠️♥️♦️♣️</h1>
     </body>
 </html>
 
