--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    
     <link rel="stylesheet" href="style.css"></link>
     <title>BlackJack ♠️♥️♦️♣️</title>
 </head>
     <body>
         <h1>BlackJack ♠️♥️♦️♣️</h1>
-        <p id="message-el">Want to play a round</p>
+        <p id="message-el"> Want to play a round? </p>
         <p>Cards:</p>
         <p>Sum:</p>
         <button onclick="startGame()">START GAME</button>
+        <script src="index.js"></script>
     </body>
 </html>
 
