--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
             <button onclick="startGame()">START GAME</button>
             <button onclick="newCard()">NEW CARD</button>
             <p id="player-el"></p>
-            <script src="index.js"></script>
+           
         </div>
+
+        <div id="box">...Goodluck!...</div>
+
+
+        <script src="index.js"></script>
     </body>
 </html>
 
